# moxa-dio-control

./: .gitignore  .gitlab-ci.yml  API_References.md  Config_Example.md  LICENSE  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  dio.c  moxadevice.h  mx-dio-ctl.c  mx_dio.c  mx_dio.h
debian/: changelog  control  copyright  install  libmoxa-dio-control-dev.install  libmoxa-dio-control-dev.links  libmoxa-dio-control1.install  libmoxa-dio-control1.symbols  moxa-dio-control.install  rules
example/: Makefile  README.md  dio-test.c
include/: Makefile.am  mx_dio.h
lib/: Makefile.am  mx_dio.c
tools/: Makefile.am  mx-dio-ctl.c
